Convert Classification to record
Mostly to avoid the Objects.hash array allocations